<resources>
    <string name="app_name" translatable="false">Ingeniate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theory">Theory</string>
    <string name="title_activity_tabbed_">Tabbed_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="admission">Admission</string>
    <string name="socialinteraction">Social Interaction</string>
    <string name="examples">Examples</string>
    <string name="test">Test</string>
    <string name="mathematicalthinking">Mathematical Thinking</string>
    <string name="analyticalthinking">Analytical Thinking</string>
    <string name="languagestructure">Language Structure</string>
    <string name="lecturecomprehension">Lecture Comprehension</string>
    <string name="share">Share</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="Admition">Admition</string>
    <string name="question">Pregunta</string>
    <string name="check">Check</string>
    <string name="correct">Very good!</string>
    <string name="incorrect">Incorrect...</string>
    <string name="next">Siguiente</string>
    <string name="finish">Terminar</string>
    <string name="prev">Anterior</string>
    <string name="results">Resultados</string>
    <string name="start_over">Volver a comenzar</string>
    <string name="consejos_inicio">

        Un examen de admisión es la puerta a un futuro profesional, por lo que, la preparación es fundamental para asegurar tu lugar en una institución.
        \n\nTodas las estrategias y tácticas son útiles cuando se trata de aprobar un examen de admisión, sin embargo una planeación, la preparación adecuada y los consejos apropiados, pueden aventajar un poco para conseguir el objetivo.
    </string>
    <string name="consejos_previo">
        \n• Visualiza el éxito. “Actuar como si”, es uno de los pilares del cambio en la Programación neurolingüística (PNL), esto supone proceder como si ya se hubiera alcanzado el objetivo ya que el poder de la mente influye en nuestras emociones y eso se capitaliza en seguridad y confianza de ti mismo.
        \n\n• Descansa y evita estudiar. Días antes del examen de admisión, de nada sirve saturar la cabeza de conocimientos, de hecho es contraproducente, para eso se supone que se estudió con antelación y dormir suficientes horas así como comer ligero, ayudaran a que te sientas activo y dispuesto.
        \n\n• Disciplina tu estudio. Realiza una planeación factible, es decir estudia al menos 50 minutos al día, de nada sirve estudiar una ocasión tres horas y dejar de estudiar durante días, la constancia y perseverancia hacen la diferencia.
        \n\n• Repasa lo del día anterior con regularidad. Antes de comenzar con conocimientos nuevos revisa lo que estudiaste previamente, esto ayudará a afianzar los conocimientos adquiridos.
        \n\n• Realiza un sumario de la semana. Dedica un día a repasar todo lo que viste en la semana, esto propiciará a que descubras tus puntos débiles o dónde debes prestar más atención.
        \n\n• Graba lo que estudies. Puedes hacer guías de estudio y grabarlas en audio, si por algún motivo un día no te sientes dispuesto, podrás escuchar las lecciones a donde quiera que vayas.
        \n\n• Sincroniza tu dispositivo móvil. Fija recordatorios y lleva una agenda donde siempre tengas visibles tus propósitos de estudio.
        \n\n• Estudia con tus amigos. Transmitir el conocimiento es una forma de afianzarlo, entonces si tienes la  asistencia de tus amigos o tú mismo los ayudas, garantizarás la firmeza de lo aprendido.
        \n\n• Realiza actividad física después de determinado tiempo. El movimiento y la memoria están sincronizados, haz gimnasia cerebral, los ejercicios son sencillos y ayudarán en tu proceso de estudio.
    </string>
    <string name="consejos_durante">
        \n• Responde la materia donde te sientas más seguro primero. El orden en el que respondes el examen importa, procura resolver primero lo más sencillo, así tendrás tiempo de poner atención en lo más complejo.
        \n\n• Respira y relájate. Cuando tengas el examen enfrente revísalo bien, piensa que el examen es solo la capitalización de lo que ya has estudiado, respira profundo y restale importancia al estrés.
        \n\n• Al finalizar el examen de admisión, revisa. Una vez terminado el examen, si tienes tiempo, revísalo e intenta situarte en las preguntas dónde tuviste dudas, eso te hará sentir más seguro al final.
        \n\nLa preparación es fundamental a la hora de presentar un examen de admisión, la disciplina es la base que te conducirá al éxito seguro, no desestimes incursionar en un curso de preparación, esto, aunado a tu esfuerzo, seguro te ayudará.
    </string>
</resources>